--- a/src/app/family-situation/family-situation.component.html
+++ b/src/app/family-situation/family-situation.component.html
@@ -15,10 +15,7 @@
     <mat-label>Relationship Status</mat-label>
     <input matInput readonly [value]="relationshipStatus">
   </mat-form-field>
-  <div *ngIf="relationships">
-    <mat-form-field class="kyc-full-width" *ngFor="let relation of relationships">
-      <mat-label>{{relation.relation}}</mat-label>
-      <input matInput readonly [value]="relation.fullName">
-    </mat-form-field>
+  <div *ngIf="relationships && relationships.length > 0">
+    <app-relationship-table [relationships]="relationships"></app-relationship-table>
   </div>
 </form>
