--- a/src/app/family-situation/relationship-table/relationship-table.component.html
+++ b/src/app/family-situation/relationship-table/relationship-table.component.html
@@ -11,6 +11,18 @@
     <td mat-cell *matCellDef="let element"> {{ element.fullName }} </td>
   </ng-container>
 
+  <!-- Date of Birth Column -->
+  <ng-container matColumnDef="dateOfBirth">
+    <th mat-header-cell *matHeaderCellDef> Date of Birth </th>
+    <td mat-cell *matCellDef="let element"> {{ element.dateOfBirth }} </td>
+  </ng-container>
+
+  <!-- Date of Birth Column -->
+  <ng-container matColumnDef="dateOfDeath">
+    <th mat-header-cell *matHeaderCellDef> Date of Death </th>
+    <td mat-cell *matCellDef="let element"> {{ element.dateOfDeath }} </td>
+  </ng-container>
+
   <!-- Column Definitions -->
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
