--- a/src/app/family-situation/family-situation.component.css
+++ b/src/app/family-situation/family-situation.component.css
@@ -44,3 +44,15 @@ mat-label {
   --mdc-linear-progress-active-indicator-color: #FB6F90;
   --mdc-linear-progress-track-color: #E3E3E3;
 }
+
+mat-expansion-panel {
+  margin-top: 10px;
+}
+
+mat-expansion-panel {
+  color: #373A36;
+}
+
+mat-panel-title {
+  color: #373A36;
+}
