--- a/src/app/family-situation/relationship-table/relationship-table.component.html
+++ b/src/app/family-situation/relationship-table/relationship-table.component.html
@@ -11,6 +11,12 @@
     <td mat-cell *matCellDef="let element"> {{ element.fullName }} </td>
   </ng-container>
 
+ <!-- Date of birth Column -->
+  <ng-container matColumnDef="dateOfBirth">
+    <th mat-header-cell *matHeaderCellDef> Date of birth </th>
+    <td mat-cell *matCellDef="let element"> {{ element.dateOfBirth }} </td>
+  </ng-container>
+
   <!-- Column Definitions -->
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
