--- a/src/app/family-situation/family-situation.component.html
+++ b/src/app/family-situation/family-situation.component.html
@@ -5,7 +5,8 @@
               matInput [(ngModel)]="text"
               cdkTextareaAutosize
               cdkAutosizeMinRows="2"
-              cdkAutosizeMaxRows="50"></textarea>
+              cdkAutosizeMaxRows="13"
+    ></textarea>
   </mat-form-field>
   <div>
     <button mat-raised-button color="primary" (click)="onGenerate()">Generate</button>
