--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<mat-toolbar>
-  <span>AI Platform - Know Your Customer</span>
-</mat-toolbar>
-
-<app-family-situation></app-family-situation>
+<app-migration></app-migration>
