--- a/src/app/family-situation/relationship-table/relationship-table.component.html
+++ b/src/app/family-situation/relationship-table/relationship-table.component.html
@@ -98,8 +98,8 @@
       <tr aria-level="1" aria-posinset="1" aria-selected="false" aria-setsize="4" class="slds-hint-parent" tabindex="0" *ngFor="let relationship of relationships; index as i">
         <td class="slds-text-align_right" role="gridcell" style="width:3.25rem">
           <div class="slds-checkbox">
-            <input type="checkbox" name="options" id="checkbox-{{'checkbox-'+i }}" value="{{'checkbox-'+ i }}" aria-labelledby="column-group-header" />
-            <label class="slds-checkbox__label" for="{{ 'checkbox-'+i }}" id="{{'check-button-label-' + i }}">
+            <input type="checkbox" name="options" id="checkbox-{{i}}" value="checkbox-{{i}}" aria-labelledby="column-group-header" />
+            <label class="slds-checkbox__label" for="checkbox-{{i}}" id="check-button-label-{{i}}">
               <span class="slds-checkbox_faux"></span>
               <span class="slds-form-element__label slds-assistive-text">Select item {{ i }}</span>
             </label>
