--- a/src/app/legacy-data/legacy-data.component.html
+++ b/src/app/legacy-data/legacy-data.component.html
@@ -6,7 +6,7 @@
       </ngl-textarea>
     </div>
   </div>
-  <ngl-file-upload label="Attachments" [formControl]="ctrl" [accept]="['image/*', 'application/pdf']" [maxFiles]="maxFiles" [maxFilesize]="maxFileSize" [error]="$any(ctrl.invalid ? errorTpl : null)"></ngl-file-upload>
+  <ngl-file-upload label="Attachments" [formControl]="ctrl" [accept]="['image/*', 'application/pdf']" [maxFiles]="maxFiles" [maxFilesize]="maxFileSize" [error]="$any(ctrl.invalid ? errorTpl : null)" (change)="onFileChange($event)"></ngl-file-upload>
 
   <div class="slds-text-heading_small slds-m-top_large slds-text-color_success" *ngIf="ctrl.valid">
     <div *ngFor="let file of ctrl.value">{{ file.name }}</div>
@@ -18,4 +18,32 @@
     <ng-container *ngIf="ctrl.errors && ctrl.errors['nglFileUpload']?.maxFilesize as file">"{{ file.name}}" is bigger than 1MB!</ng-container>
     <ng-container *ngIf="ctrl.errors && ctrl.errors['nglFileUpload']?.maxFiles">Too many files selected!</ng-container>
   </ng-template>
+
+  <ul class="slds-grid slds-grid_pull-padded" *ngIf="this.idDocuments.length > 0">
+    <li class="slds-p-horizontal_xx-small slds-size_1-of-2 slds-medium-size_1-of-3" *ngFor="let idDocument of idDocuments">
+      <div class="slds-file slds-file_card slds-has-title">
+        <figure>
+          <a href="#" class="slds-file__crop">
+            <span class="slds-assistive-text">Preview:</span>
+            <img src="{{idDocument.image}}}" alt="{{idDocument.fileName}}" />
+          </a>
+          <figcaption class="slds-file__title slds-file__title_card">
+            <div class="slds-media slds-media_small slds-media_center">
+              <div class="slds-media__figure slds-line-height_reset">
+              <span class="slds-icon_container" title="pdf">
+                <svg class="slds-icon slds-icon_x-small" aria-hidden="true">
+                  <use xlink:href="/assets/icons/doctype-sprite/svg/symbols.svg#pdf"></use>
+                </svg>
+                <span class="slds-assistive-text">pdf</span>
+              </span>
+              </div>
+              <div class="slds-media__body">
+                <span class="slds-file__text slds-truncate" title="{{idDocument.fileName}}">{{idDocument.fileName}}</span>
+              </div>
+            </div>
+          </figcaption>
+        </figure>
+      </div>
+    </li>
+  </ul>
 </div>
