--- a/src/app/family-situation/family-situation.component.html
+++ b/src/app/family-situation/family-situation.component.html
@@ -1,36 +1,10 @@
-<form class="kyc-form">
-  <mat-form-field class="kyc-full-width textarea-mat-form-field">
-    <mat-label>Free text field: Family situation </mat-label>
-    <textarea name="familySituationFreeText"
-              matInput [(ngModel)]="text"
-              cdkTextareaAutosize
-              cdkAutosizeMinRows="2"
-              cdkAutosizeMaxRows="13"
-    ></textarea>
-  </mat-form-field>
-  <div>
-    <button mat-raised-button color="primary" (click)="onGenerate()">Generate</button>
+<div class="slds-m-horizontal_large">
+
+  <div *ngIf="kycResult.partnerRelations.relations.length > 0">
+    <app-relationship-table [relationships]="kycResult.partnerRelations.relations"></app-relationship-table>
   </div>
-  <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
-  <mat-form-field class="kyc-full-width result-mat-form-field" *ngIf="relationshipStatus">
-    <mat-label>Relationship Status</mat-label>
-    <input matInput readonly [value]="relationshipStatus">
-  </mat-form-field>
-  <mat-form-field class="kyc-full-width result-mat-form-field" *ngIf="relationshipStatus">
-    <mat-label>Date of Birth</mat-label>
-    <input matInput readonly [value]="dateOfBirth">
-  </mat-form-field>
-  <div *ngIf="relationships && relationships.length > 0">
-    <app-relationship-table [relationships]="relationships"></app-relationship-table>
-  </div>
-  <mat-accordion *ngIf="remarks">
-    <mat-expansion-panel>
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          Remarks
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <p>{{remarks}}</p>
-    </mat-expansion-panel>
-  </mat-accordion>
-</form>
+
+  <ul ngl-accordion *ngIf="kycResult?.remarks" activeName="remarks">
+    <ng-template nglAccordionSection name="remarks" label="Remarks">{{kycResult.remarks}}</ng-template>
+  </ul>
+</div>
