--- a/src/app/family-situation/relationship-table/relationship-table.component.html
+++ b/src/app/family-situation/relationship-table/relationship-table.component.html
@@ -1,29 +1,179 @@
-<table mat-table [dataSource]="dataSource">
-  <!-- Relation Column -->
-  <ng-container matColumnDef="relation">
-    <th mat-header-cell *matHeaderCellDef> Relation </th>
-    <td mat-cell *matCellDef="let element"> {{ element.relation }} </td>
-  </ng-container>
+<article class="slds-card">
+  <div class="slds-card__header slds-grid">
+    <header class="slds-media slds-media_center slds-has-flexi-truncate">
+      <div class="slds-media__figure">
+        <span class="slds-icon_container slds-icon-standard-contact" title="account">
+          <svg class="slds-icon slds-icon_small" aria-hidden="true">
+            <use xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"></use>
+          </svg>
+          <span class="slds-assistive-text">account</span>
+        </span>
+      </div>
+      <div class="slds-media__body">
+        <h2 class="slds-card__header-title">
+          <a href="#" class="slds-card__header-link slds-truncate" title="Contacts (1)">
+            <span>Relationships ({{relationships.length}})</span>
+          </a>
+        </h2>
+      </div>
+      <div class="slds-no-flex">
+        <button class="slds-button slds-button_neutral">New</button>
+      </div>
+    </header>
+  </div>
+  <div class="slds-card__body">
+    <table aria-multiselectable="true" class="slds-table slds-table_bordered slds-table_edit slds-table_fixed-layout slds-table_resizable-cols slds-tree slds-table_tree" role="treegrid" aria-label="Example default tree grid">
+      <thead>
+      <tr class="slds-line-height_reset">
+        <th class="slds-text-align_right" scope="col" style="width:3.25rem">
+          <span id="column-group-header" class="slds-assistive-text">Choose a row</span>
+          <div class="slds-th__action slds-th__action_form">
+            <div class="slds-checkbox">
+              <input type="checkbox" name="options" id="checkbox-unique-id-534" value="checkbox-unique-id-534" tabindex="-1" aria-labelledby="check-select-all-label column-group-header" />
+              <label class="slds-checkbox__label" for="checkbox-unique-id-534" id="check-select-all-label">
+                <span class="slds-checkbox_faux"></span>
+                <span class="slds-form-element__label slds-assistive-text">Select All</span>
+              </label>
+            </div>
+          </div>
+        </th>
+        <th aria-sort="none" class="slds-has-button-menu slds-is-resizable slds-is-sortable" scope="col">
+          <a class="slds-th__action slds-text-link_reset" href="#" role="button" tabindex="-1">
+            <span class="slds-assistive-text">Sort by: </span>
+            <div class="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate">
+              <span class="slds-truncate" title="Relation">Relation</span>
+              <span class="slds-icon_container slds-icon-utility-arrowdown">
+                  <svg class="slds-icon slds-icon-text-default slds-is-sortable__icon " aria-hidden="true">
+                    <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"></use>
+                  </svg>
+                </span>
+            </div>
+          </a>
+        </th>
 
-  <!-- Full Name Column -->
-  <ng-container matColumnDef="fullName">
-    <th mat-header-cell *matHeaderCellDef> Full Name </th>
-    <td mat-cell *matCellDef="let element"> {{ element.fullName }} </td>
-  </ng-container>
+        <th aria-sort="none" class="slds-has-button-menu slds-is-resizable slds-is-sortable" scope="col">
+          <a class="slds-th__action slds-text-link_reset" href="#" role="button" tabindex="-1">
+            <span class="slds-assistive-text">Sort by: </span>
+            <div class="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate">
+              <span class="slds-truncate" title="Full Name">Last Name</span>
+              <span class="slds-icon_container slds-icon-utility-arrowdown">
+                  <svg class="slds-icon slds-icon-text-default slds-is-sortable__icon " aria-hidden="true">
+                    <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"></use>
+                  </svg>
+                </span>
+            </div>
+          </a>
+        </th>
 
-  <!-- Date of Birth Column -->
-  <ng-container matColumnDef="dateOfBirth">
-    <th mat-header-cell *matHeaderCellDef> Date of Birth </th>
-    <td mat-cell *matCellDef="let element"> {{ element.dateOfBirth }} </td>
-  </ng-container>
+        <th aria-sort="none" class="slds-has-button-menu slds-is-resizable slds-is-sortable" scope="col">
+          <a class="slds-th__action slds-text-link_reset" href="#" role="button" tabindex="-1">
+            <span class="slds-assistive-text">Sort by: </span>
+            <div class="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate">
+              <span class="slds-truncate" title="Full Name">First Name</span>
+              <span class="slds-icon_container slds-icon-utility-arrowdown">
+                  <svg class="slds-icon slds-icon-text-default slds-is-sortable__icon " aria-hidden="true">
+                    <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"></use>
+                  </svg>
+                </span>
+            </div>
+          </a>
+        </th>
 
-  <!-- Date of Birth Column -->
-  <ng-container matColumnDef="dateOfDeath">
-    <th mat-header-cell *matHeaderCellDef> Date of Death </th>
-    <td mat-cell *matCellDef="let element"> {{ element.dateOfDeath }} </td>
-  </ng-container>
+        <th aria-sort="none" class="slds-has-button-menu slds-is-resizable slds-is-sortable" scope="col">
+          <a class="slds-th__action slds-text-link_reset" href="#" role="button" tabindex="-1">
+            <span class="slds-assistive-text">Sort by: </span>
+            <div class="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate">
+              <span class="slds-truncate" title="Date of Birth">Date of Birth</span>
+              <span class="slds-icon_container slds-icon-utility-arrowdown">
+                  <svg class="slds-icon slds-icon-text-default slds-is-sortable__icon " aria-hidden="true">
+                    <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"></use>
+                  </svg>
+                </span>
+            </div>
+          </a>
+        </th>
 
-  <!-- Column Definitions -->
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+        <th aria-sort="none" class="slds-has-button-menu slds-is-resizable slds-is-sortable" scope="col">
+          <a class="slds-th__action slds-text-link_reset" href="#" role="button" tabindex="-1">
+            <span class="slds-assistive-text">Sort by: </span>
+            <div class="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate">
+              <span class="slds-truncate" title="Date of Death">Date of Death</span>
+              <span class="slds-icon_container slds-icon-utility-arrowdown">
+                  <svg class="slds-icon slds-icon-text-default slds-is-sortable__icon " aria-hidden="true">
+                    <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"></use>
+                  </svg>
+                </span>
+            </div>
+          </a>
+        </th>
+
+        <th aria-sort="none" class="slds-has-button-menu slds-is-resizable slds-is-sortable" scope="col">
+          <a class="slds-th__action slds-text-link_reset" href="#" role="button" tabindex="-1">
+            <span class="slds-assistive-text">Sort by: </span>
+            <div class="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate">
+              <span class="slds-truncate" title="Date of Death">Nationality</span>
+              <span class="slds-icon_container slds-icon-utility-arrowdown">
+                  <svg class="slds-icon slds-icon-text-default slds-is-sortable__icon " aria-hidden="true">
+                    <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"></use>
+                  </svg>
+                </span>
+            </div>
+          </a>
+        </th>
+
+        <th aria-sort="none" class="slds-has-button-menu slds-is-resizable slds-is-sortable" scope="col">
+          <a class="slds-th__action slds-text-link_reset" href="#" role="button" tabindex="-1">
+            <span class="slds-assistive-text">Sort by: </span>
+            <div class="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate">
+              <span class="slds-truncate" title="Date of Death">Domicile</span>
+              <span class="slds-icon_container slds-icon-utility-arrowdown">
+                  <svg class="slds-icon slds-icon-text-default slds-is-sortable__icon " aria-hidden="true">
+                    <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"></use>
+                  </svg>
+                </span>
+            </div>
+          </a>
+        </th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr aria-level="1" aria-posinset="1" aria-selected="false" aria-setsize="4" class="slds-hint-parent" tabindex="0" *ngFor="let relationship of relationships; index as i">
+        <td class="slds-text-align_right" role="gridcell" style="width:3.25rem">
+          <div class="slds-checkbox">
+            <input type="checkbox" name="options" id="checkbox-{{i}}" value="checkbox-{{i}}" aria-labelledby="column-group-header" />
+            <label class="slds-checkbox__label" for="checkbox-{{i}}" id="check-button-label-{{i}}">
+              <span class="slds-checkbox_faux"></span>
+              <span class="slds-form-element__label slds-assistive-text">Select item {{ i }}</span>
+            </label>
+          </div>
+        </td>
+        <td data-label="Relation" role="gridcell">
+          <div class="slds-truncate" title="{{ relationship.relationType }}">{{ relationship.relationType.toLowerCase() }}</div>
+        </td>
+        <td data-label="Last Name" role="gridcell">
+          <div class="slds-truncate" title="{{ relationship.lastName }}">{{ relationship.lastName }}</div>
+        </td>
+        <td data-label="First Name" role="gridcell">
+          <div class="slds-truncate" title="{{ relationship.firstName }}">{{ relationship.firstName }}</div>
+        </td>
+        <td data-label="Data of Birth" role="gridcell">
+          <div class="slds-truncate" title="{{ relationship.dateOfBirth }}">
+            {{ relationship.dateOfBirth }}
+          </div>
+        </td>
+        <td data-label="Data of Death" role="gridcell">
+          <div class="slds-truncate" title="{{ relationship.dateOfDeath }}">{{ relationship.dateOfDeath }}</div>
+        </td>
+
+        <td data-label="Nationality" role="gridcell">
+          <div class="slds-truncate" title="{{ relationship.nationality }}">{{ relationship.nationality }}</div>
+        </td>
+
+        <td data-label="Domicile" role="gridcell">
+          <div class="slds-truncate" title="{{ relationship.domicile }}">{{ relationship.domicile }}</div>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</article>
